# notion-calendar

./: Cargo.toml  README.md  cal.org  env-example
examples/: ical.rs  org.rs
src/: calendar.rs  event.rs  lib.rs
