[package]
name = "notion-calendar"
version = "0.2.0"
edition = "2021"


[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
ical = { version = "0.10.0", features = ["generator"] }
notion = { git = "https://github.com/trobanga/notion.git" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1.35.1", features = ["full"] }
